--- a/index.html
+++ b/index.html
@@ -1,5 +1,26 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Brian Waweru's Portfolio</h1>
+    <hr />
+    <a href="./public/about.html">More about Brian</a>
+    <p>These are a few of my projects as a beginner</p>
+    <ol>
+    <li><a href="./public/birthday-invite.html">birthday-invite</a> </li>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg">
+    <li><a href="./public/movie-ranking.html">Best movies</a>    </li>
+    <img src="./assets/images/Screenshot (30).png"
+    </ol>
+    <hr />
+    <a href="./public/contact.html">Contact me</a>
+</body>
+</html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
